--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 -->
 
 <head>
-	<title>An Example website</title>
+	<title>practice website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			sample testing of the conflict 
 		</p>
 	</main>
 	<footer class="container">
