adding changes in the simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 -->
 
 <head>
-	<title>An great website</title>
+	<title>lots of trouble ,in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
