local: updating simple.html

--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy;git traning  Company 2014</p>
+		<p>&copy;2026 pavithra traning ...going good</p>
 	</footer>
 </body>
 </html>
