done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 -->
 
 <head>
-	<title>lots of trouble ,in a little repo</title>
+	<title>updating titie for stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			sample testing of the conflict 
+			adding more important content in the field
 		</p>
 	</main>
 	<footer class="container">
