changes after git-stash command

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 -->
 
 <head>
-	<title>updating titie for stash example</title>
+	<title>updating titie for stash example BRANCH</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
